# easyfocus-hyprland

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: README.md  cli.rs  hypr.rs  main.rs  types.rs  ui.rs  utils.rs
